force-app/main/default/objects/Apttus__MSTeamsDetail__c/Apttus__MSTeamsDetail__c.object-meta.xml
<CustomObject>
    <description>Object to store the MS Teams related/specific information</description>
    <label>MS Teams Detail</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MS Teams Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>