force-app/main/default/objects/Apttus__MSTeamsDetail__c/fields/Apttus__ChannelId__c.field-meta.xml
<CustomField>
    <fullName>Apttus__ChannelId__c</fullName>
    <description>Channel Id of MS Teams</description>
    <externalId>true</externalId>
    <inlineHelpText>Unique Channel Id</inlineHelpText>
    <label>Channel Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>