force-app/main/default/objects/Apttus__MSTeamsDetail__c/fields/Apttus__ChannelName__c.field-meta.xml
<CustomField>
    <fullName>Apttus__ChannelName__c</fullName>
    <description>Channel name to be created for review cycle</description>
    <inlineHelpText>Name of the Channel created for review cycle</inlineHelpText>
    <label>Channel Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>