force-app/main/default/objects/Apttus__MSTeamsDetail__c/fields/Apttus__Description__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Description__c</fullName>
    <description>Description of the MS team</description>
    <inlineHelpText>Description of the MS team</inlineHelpText>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>