force-app/main/default/objects/Apttus__MSTeamsDetail__c/fields/Apttus__DownloadURL__c.field-meta.xml
<CustomField>
    <fullName>Apttus__DownloadURL__c</fullName>
    <description>Download URL of uploaded document</description>
    <inlineHelpText>Download URL of the uploaded document</inlineHelpText>
    <label>Download URL</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>