force-app/main/default/objects/Apttus__MSTeamsDetail__c/fields/Apttus__Exception__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Exception__c</fullName>
    <description>Stores error coming from MS Teams, if any</description>
    <inlineHelpText>Error messages from MS Teams</inlineHelpText>
    <label>Exception</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>