force-app/main/default/objects/Apttus__MSTeamsDetail__c/fields/Apttus__GroupId__c.field-meta.xml
<CustomField>
    <fullName>Apttus__GroupId__c</fullName>
    <description>Group Id of MS Teams</description>
    <externalId>true</externalId>
    <inlineHelpText>Unique Group Id</inlineHelpText>
    <label>Group Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>