force-app/main/default/objects/Apttus__MSTeamsDetail__c/fields/Apttus__GroupName__c.field-meta.xml
<CustomField>
    <fullName>Apttus__GroupName__c</fullName>
    <description>Group name to be created for review cycle</description>
    <inlineHelpText>Name of the Group created for review cycle</inlineHelpText>
    <label>Group Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>