force-app/main/default/objects/Apttus__MSTeamsDetail__c/fields/Apttus__MSTeamsStatus__c.field-meta.xml
<CustomField>
    <fullName>Apttus__MSTeamsStatus__c</fullName>
    <description>Status of the review cycle</description>
    <inlineHelpText>Review cycle status</inlineHelpText>
    <label>MS Teams Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>In-Progress</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>