force-app/main/default/objects/Apttus__MSTeamsDetail__c/fields/Apttus__MSTeamsStatusType__c.field-meta.xml
<CustomField>
    <fullName>Apttus__MSTeamsStatusType__c</fullName>
    <description>Status Type of review cycle</description>
    <inlineHelpText>Review cycle status type</inlineHelpText>
    <label>MS Teams Status Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>GroupCreation</fullName>
            </value>
            <value>
                <fullName>TeamCreation</fullName>
            </value>
            <value>
                <fullName>ChannelCreation</fullName>
            </value>
            <value>
                <fullName>Upload</fullName>
            </value>
            <value>
                <fullName>Review</fullName>
            </value>
            <value>
                <fullName>ReviewEnd</fullName>
            </value>
            <value>
                <fullName>ReviewCancel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>