force-app/main/default/objects/Apttus__MSTeamsDetail__c/fields/Apttus__ReviewCycleId__c.field-meta.xml
<CustomField>
    <fullName>Apttus__ReviewCycleId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Review Cycle Lookup</description>
    <inlineHelpText>Review Cycle Lookup</inlineHelpText>
    <label>Review Cycle</label>
    <referenceTo>Apttus__ReviewCycle__c</referenceTo>
    <relationshipLabel>MS Teams Details (Review Cycle)</relationshipLabel>
    <relationshipName>MSTeamsDetails</relationshipName>
    <type>Lookup</type>
</CustomField>