force-app/main/default/objects/Apttus__MSTeamsDetail__c/fields/Apttus__ReviewDetail__c.field-meta.xml
<CustomField>
    <fullName>Apttus__ReviewDetail__c</fullName>
    <description>Additional detail of job</description>
    <inlineHelpText>Additional job details</inlineHelpText>
    <label>Review Detail</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>