force-app/main/default/objects/Apttus__MSTeamsDetail__c/fields/Apttus__TeamId__c.field-meta.xml
<CustomField>
    <fullName>Apttus__TeamId__c</fullName>
    <description>Team Id of MS Teams</description>
    <externalId>true</externalId>
    <inlineHelpText>Unique Team Id</inlineHelpText>
    <label>Team Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>